# backend_scripts

./: .gitignore  .gitmodules  README.md  dockerfile  main.py  package-lock.json  package.json  pyproject.toml  requirements.in  update.sh
.github/workflows/: check-venv.yml  python-app.yml
src/: index.ts  requirements.txt  server.py  server.ts
src/backend/parser/: bitreader.py
src/dem_parser/: binary.txt  data.py  main.py  movementcsv.py  parser.py  requirements.txt  testtimestamps.py  timerange.txt  timestamps.py  trimmer
src/dem_parser/steam_demo_downloader/: demodownloader.py  nextcodefetcher.py
src/dem_parser/steam_demo_downloader/cs2module/: cs2client.py  protobufs.py
src/parser/: dump_header.py  protoreader.py  run_reader.py
src/steam_demo_downloader/: demodownloader.py  nextcodefetcher.py  sender.py
src/steam_demo_downloader/cs2module/: cs2client.py  protobufs.py
src/transcription/: config.py  engine_asr.py  engine_llm.py  main.py  parakeet-exp.py  requirements.txt  transcriber-para.py  transcriber.py  utils_audio.py
tests/: test_webserv.py
